updated all content within head tag & all section headers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-    <body></body>
+    <head>
+        <title>Anoushka Dave's User Page</title>
+        <meta charset="utf-8">
+
+        <!--My Github-->
+        <link href="https://github.com/anoushkadave" rel="author">
+    </head>
+    <body>
+        <!--Introduction-->
+        <header>
+            <h1>Anoushka Dave</h1>
+            <!--insert my picture-->
+            <!--insert code snippet-->
+            <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
+                I love programming, implementing my vision through personal projects, and helping my community. 
+                Outside of classes, I actively participate in student organizations and love theatre!</p>
+        </header>
+        <main>
+            <!--Education-->
+            <section>
+                <h2>Education</h2>
+
+                <h3>Bachelor's of Science, Computer Science</h3>
+                <h3>High School Diploma</h3>
+            </section>
+            <!--Programming Skills-->
+            <section>
+                <h2>Programming Skills</h2>
+
+                <h3>Proficient</h3>
+                <h3>Familiar</h3>
+            </section>
+            <!--Languages-->
+            <section>
+                <h2>Languages</h2>
+            </section>
+        </main>
+        <footer>
+            <!--insert jacobs picture-->
+        </footer>
+    </body>
 </html>
