--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Anoushka Dave's User Page</title>
         <meta charset="utf-8">
 
-        <!--My Github-->
+        <!--My GitHub-->
         <link href="https://github.com/anoushkadave" rel="author">
     </head>
     <body>
@@ -12,33 +12,81 @@
         <header>
             <h1>Anoushka Dave</h1>
             <!--insert my picture-->
-            <!--insert code snippet-->
-            <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
-                I love programming, implementing my vision through personal projects, and helping my community. 
-                Outside of classes, I actively participate in student organizations and love theatre!</p>
+            <code>System.out.println("Hello, World! Welcome to my personal website!");</code>
+            <div>
+                <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
+                    I love <em>programming</em>, implementing my vision through <em>personal projects</em>, and helping <em>my community</em>. 
+                    Outside of classes, I actively participate in <em>student organizations</em> and love <em>theatre</em>!</p>
+                <p><strong>My favorite inspirational <em>quote</em> is:</strong></p>
+
+                <blockquote>"You never lose, you either win or you learn."</blockquote>
+
+                <p>I would love to connect and share my full resume with you! 
+                    To get to know me better, visit my <span><a href="https://www.linkedin.com/in/anoushka-dave/" target="_blank">LinkedIn</a></span> or <span><a href="mailto:adave@ucsd.edu" target="_blank">email me</a></span>! 
+                    Check out all of my projects by visiting my <span><a href="https://github.com/anoushkadave" target="_blank">GitHub</a></span>! 
+                    I look forward to speaking with you 😄!</p>
+            </div>
+
+            <p>The following sections describe my experiences in more detail:</p>
+            <nav>
+                <ul>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#programming-skills">Programming Skills</a></li>
+                    <li><a href="#languages">Languages</a></li>
+                </ul>
+            </nav>
+            <hr>
         </header>
         <main>
             <!--Education-->
-            <section>
+            <section id="education">
                 <h2>Education</h2>
-
-                <h3>Bachelor's of Science, Computer Science</h3>
-                <h3>High School Diploma</h3>
+                <div>
+                    <h3>Bachelor's of Science, Computer Science</h3>
+                    <div>
+                        <b><i>University of California, San Diego</i>, GPA: 4.00</b><br>
+                        <i>September 2019 - Anticipated June 2023</i>
+                    </div>
+                </div>
+                <div>
+                    <h3>High School Diploma</h3>
+                    <div>
+                        <b><i>University Preparatory Academy</i>, GPA: 4.00</b><br>
+                        <i>August 2015 - June 2019</i>
+                    </div>
+                </div>
             </section>
+            <hr>
             <!--Programming Skills-->
-            <section>
+            <section id="programming-skills">
                 <h2>Programming Skills</h2>
 
-                <h3>Proficient</h3>
-                <h3>Familiar</h3>
+                <div>
+                    <h3>Proficient</h3>
+                </div>
+                <div>
+                    <h3>Familiar</h3>
+                </div>
             </section>
+            <hr>
             <!--Languages-->
-            <section>
+            <section id="languages">
                 <h2>Languages</h2>
+                <div>
+                    <ol>
+                        <li>English, <em>Native</em></li>
+                        <li>Hindi, <em>Native</em></li>
+                        <li>Gujarati, <em>Native</em></li>
+                        <li>Spanish, <em>Conversational</em></li>
+                    </ol>
+                </div>
             </section>
         </main>
         <footer>
-            <!--insert jacobs picture-->
+            <figure>
+                <img src="images/ucsd_cse_bear.jpg" alt="Bear">
+                <figcaption>Bear at UCSD CSE</figcaption>
+            </figure>
         </footer>
     </body>
 </html>
