--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <!--Introduction-->
         <header>
             <h1>Anoushka Dave</h1>
-            <!--insert my picture-->
+
+            <picture>
+                <img src="images/anoushka_dave"" alt="" />
+            </picture>
+
             <code>System.out.println("Hello, World! Welcome to my personal website!");</code>
             <div>
                 <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
@@ -81,11 +85,14 @@
                     </ol>
                 </div>
             </section>
+            <hr>
         </main>
         <footer>
             <figure>
-                <img src="images/ucsd_cse_bear.jpg" alt="Bear">
-                <figcaption>Bear at UCSD CSE</figcaption>
+                <!--<img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
+                <figcaption>Bear at UCSD CSE</figcaption>-->
+                <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342.75" height="80.25">
+                <figcaption>University of California, San Diego - Jacobs School of Engineering</figcaption>
             </figure>
         </footer>
     </body>
