--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
             <h1>Anoushka Dave</h1>
 
             <picture>
-                <img src="images/anoushka_dave"" alt="" />
+                <img src="images/anoushka_dave.jpg"" alt="" width="250" height="250"/>
             </picture>
+            <br>
 
             <code>System.out.println("Hello, World! Welcome to my personal website!");</code>
             <div>
                 <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
                     I love <em>programming</em>, implementing my vision through <em>personal projects</em>, and helping <em>my community</em>. 
                     Outside of classes, I actively participate in <em>student organizations</em> and love <em>theatre</em>!</p>
-                <p><strong>My favorite inspirational <em>quote</em> is:</strong></p>
 
+                <p>Here is where UC San Diego is located:</p>
+                <iframe id="inlineFrame"
+                    title="Inline Frame - UCSD Location"
+                    width="300"
+                    height="200"
+                    src="https://www.openstreetmap.org/export/embed.html?bbox=-117.25282416678965%2C32.87121607270452%2C-117.22728953696787%2C32.884443337170886">
+                </iframe>
+
+                <p><strong>My favorite inspirational <em>quote</em> is:</strong></p>
                 <blockquote>"You never lose, you either win or you learn."</blockquote>
 
                 <p>I would love to connect and share my full resume with you! 
@@ -47,9 +56,45 @@
                 <h2>Education</h2>
                 <div>
                     <h3>Bachelor's of Science, Computer Science</h3>
+                    <h4>Minor in Theatre</h4>
                     <div>
                         <b><i>University of California, San Diego</i>, GPA: 4.00</b><br>
                         <i>September 2019 - Anticipated June 2023</i>
+                        <ul>
+                            <li>Provost Honors Recipient (Fall 2019, Winter 2020, Spring 2020, Fall 2020)</li>
+                            <li>Thurgood Marshall College Honors Student</li>
+                        </ul>
+                        <br>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th colspan="2">Relevant Coursework</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><b>Programming Courses</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Basic Data Structures</td>
+                                    <td>CSE 12</td>
+                                </tr>
+                                <tr>
+                                    <td>name</td>
+                                    <td>CSE </td>
+                                </tr>
+                                <tr>
+                                    <td><b>Theory Courses</b></td>
+                                </tr>
+                                <tr>
+                                    <td><b>Mathematics Courses</b></td>
+                                </tr>
+                                <tr>
+                                    <td><b>General Education</b></td>
+                                </tr>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <div>
@@ -57,6 +102,9 @@
                     <div>
                         <b><i>University Preparatory Academy</i>, GPA: 4.00</b><br>
                         <i>August 2015 - June 2019</i>
+                        <ul>
+                            <li>9 Advanced Placement Courses</li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -67,9 +115,27 @@
 
                 <div>
                     <h3>Proficient</h3>
+                    <ul>
+                        <li>Java, C, C++, Python, JavaScript, TypeScript</li>
+                        <li>HTML, CSS</li>
+                        <li>ReactJS, React Native</li>
+                        <li>Object-Oriented Programming</li>
+                        <li>Git, GitHub</li>
+                        <li>Unix (Bash)</li>
+                        <li>Agile</li>
+                    </ul>
                 </div>
                 <div>
                     <h3>Familiar</h3>
+                    <ul>
+                        <li>macOS, Windows, Linux</li>
+                        <li>Node.js, Express</li>
+                        <li>Assembly (ARM)</li>
+                        <li>Swift</li>
+                        <li>MongoDB</li>
+                        <li>Socket.io</li>
+                        <li>JUnit Testing Framework</li>
+                    </ul>
                 </div>
             </section>
             <hr>
