made table for coursework

--- a/index.html
+++ b/index.html
@@ -80,17 +80,65 @@
                                     <td>CSE 12</td>
                                 </tr>
                                 <tr>
-                                    <td>name</td>
-                                    <td>CSE </td>
+                                    <td>Software Tools & Techniques</td>
+                                    <td>CSE 15L</td>
+                                </tr>
+                                <tr>
+                                    <td>Computer Organization & Systems Programming</td>
+                                    <td>CSE 30</td>
+                                </tr>
+                                <tr>
+                                    <td>Advanced Data Structures</td>
+                                    <td>CSE 100</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering</td>
+                                    <td>CSE 110</td>
+                                </tr>
+                                <tr>
+                                    <td>Introduction to Machine Learning</td>
+                                    <td>CSE 151A</td>
                                 </tr>
                                 <tr>
                                     <td><b>Theory Courses</b></td>
                                 </tr>
                                 <tr>
+                                    <td>Discrete Mathematics</td>
+                                    <td>CSE 20</td>
+                                </tr>
+                                <tr>
+                                    <td>Mathematics for Algorithms & Systems</td>
+                                    <td>CSE 21</td>
+                                </tr>
+                                <tr>
+                                    <td>Theory of Computation</td>
+                                    <td>CSE 105</td>
+                                </tr>
+                                <tr>
                                     <td><b>Mathematics Courses</b></td>
                                 </tr>
                                 <tr>
+                                    <td>Vector Calculus</td>
+                                    <td>MATH 20C</td>
+                                </tr>
+                                <tr>
+                                    <td>Linear Algebra</td>
+                                    <td>MATH 18</td>
+                                </tr>
+                                <tr>
+                                    <td>A Practical Introduction to Probability & Statistics</td>
+                                    <td>CSE 103</td>
+                                </tr>
+                                <tr>
                                     <td><b>General Education</b></td>
+                                </tr>
+                                <tr>
+                                    <td>DOC Writing Series</td>
+                                    <td>DOC 1-3</td>
+                                </tr>
+                                <tr>
+                                    <td>General Chemistry 1</td>
+                                    <td>CHEM 6A</td>
                                 </tr>
                                 </tr>
                             </tbody>
