--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Anoushka Dave's User Page</title>
         <meta charset="utf-8">
-
+        
         <!--My GitHub-->
         <link href="https://github.com/anoushkadave" rel="author">
     </head>
@@ -66,77 +66,87 @@
                         </ul>
                         <br>
                         <table>
+                            <caption><strong>Relevant Coursework</strong></caption>
+                            <colgroup>
+                                <col>
+                                <col span="1">
+                                <col span="1">
+                            </colgroup>
                             <thead>
                                 <tr>
-                                    <th colspan="2">Relevant Coursework</th>
+                                    <td></td>
+                                    <th>Title</th>
+                                    <th>Number</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><b>Programming Courses</b></td>
-                                </tr>
-                                <tr>
+                                    <td><b>Programming</b></td>
                                     <td>Basic Data Structures</td>
                                     <td>CSE 12</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Software Tools & Techniques</td>
                                     <td>CSE 15L</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Computer Organization & Systems Programming</td>
                                     <td>CSE 30</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Advanced Data Structures</td>
                                     <td>CSE 100</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Software Engineering</td>
                                     <td>CSE 110</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Introduction to Machine Learning</td>
                                     <td>CSE 151A</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Theory Courses</b></td>
-                                </tr>
-                                <tr>
+                                    <td><b>Theory</b></td>
                                     <td>Discrete Mathematics</td>
                                     <td>CSE 20</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Mathematics for Algorithms & Systems</td>
                                     <td>CSE 21</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Theory of Computation</td>
                                     <td>CSE 105</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Mathematics Courses</b></td>
-                                </tr>
-                                <tr>
+                                    <td><b>Mathematics</b></td>
                                     <td>Vector Calculus</td>
                                     <td>MATH 20C</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>Linear Algebra</td>
                                     <td>MATH 18</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>A Practical Introduction to Probability & Statistics</td>
                                     <td>CSE 103</td>
                                 </tr>
                                 <tr>
                                     <td><b>General Education</b></td>
-                                </tr>
-                                <tr>
                                     <td>DOC Writing Series</td>
                                     <td>DOC 1-3</td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td>General Chemistry 1</td>
                                     <td>CHEM 6A</td>
                                 </tr>
@@ -145,6 +155,7 @@
                         </table>
                     </div>
                 </div>
+                <br>
                 <div>
                     <h3>High School Diploma</h3>
                     <div>
