fixed issue of pic not showing up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Anoushka Dave</h1>
 
             <picture>
-                <img src="images/anoushka_dave.jpg"" alt="" width="250" height="250"/>
+                <img src="images/anoushka_dave.jpg" alt="" width="250" height="250"/>
             </picture>
             <br>
 
