changed file name to show image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Anoushka Dave</h1>
 
             <picture>
-                <img src="images/anoushka_dave.jpg" alt="" width="250" height="250"/>
+                <img src="images/Anoushka_Dave.jpg" alt="" width="250" height="250"/>
             </picture>
             <br>
 
@@ -30,6 +30,10 @@
                     height="200"
                     src="https://www.openstreetmap.org/export/embed.html?bbox=-117.25282416678965%2C32.87121607270452%2C-117.22728953696787%2C32.884443337170886">
                 </iframe>
+
+                <aside>
+                    <p>Earl Warren College is where the Jacobs School of Engineering is located!</p>
+                </aside>
 
                 <p><strong>My favorite inspirational <em>quote</em> is:</strong></p>
                 <blockquote>"You never lose, you either win or you learn."</blockquote>
