added contact me & fun questions sections

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <p>I would love to connect and share my full resume with you! 
                     To get to know me better, visit my <span><a href="https://www.linkedin.com/in/anoushka-dave/" target="_blank">LinkedIn</a></span> or <span><a href="mailto:adave@ucsd.edu" target="_blank">email me</a></span>! 
                     Check out all of my projects by visiting my <span><a href="https://github.com/anoushkadave" target="_blank">GitHub</a></span>! 
+                    You can also contact me through my personal website by providing your information <a href="#contact-me">here</a>!
                     I look forward to speaking with you 😄!</p>
             </div>
 
@@ -85,7 +86,12 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><b>Programming</b></td>
+                                    <td><b><pre>Programming     </pre></b></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
                                     <td>Basic Data Structures</td>
                                     <td>CSE 12</td>
                                 </tr>
@@ -115,7 +121,12 @@
                                     <td>CSE 151A</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Theory</b></td>
+                                    <td><b><pre>Theory     </pre></b></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
                                     <td>Discrete Mathematics</td>
                                     <td>CSE 20</td>
                                 </tr>
@@ -130,7 +141,12 @@
                                     <td>CSE 105</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Mathematics</b></td>
+                                    <td><b><pre>Mathematics     </pre></b></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
                                     <td>Vector Calculus</td>
                                     <td>MATH 20C</td>
                                 </tr>
@@ -145,7 +161,12 @@
                                     <td>CSE 103</td>
                                 </tr>
                                 <tr>
-                                    <td><b>General Education</b></td>
+                                    <td><b><pre>General Education     </pre></b></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
                                     <td>DOC Writing Series</td>
                                     <td>DOC 1-3</td>
                                 </tr>
@@ -219,6 +240,75 @@
                 </div>
             </section>
             <hr>
+            <!--Contact Me-->
+            <h2 id="contact-me">Contact me here!</h2>
+            <form>
+                <label>Enter your name: </label>
+                <input type="text">
+                <br>
+                <label>What is the date today?</label>
+                <input type="date">
+                <br>
+                <label>Enter your email address: </label>
+                <input type="email">
+                <br>
+                <label>Enter your phone number: </label>
+                <input type="text">
+                <br>
+                <label>What is the best way to reach you?</label>
+                <select>
+                    <optgroup>
+                        <option>Email</option>
+                        <option>Phone</option>
+                    </optgroup>
+                </select>
+                <br>
+                <label>How many days of notice should I provide before contacting you?</label>
+                <input type="number">
+                <br>
+                <fieldset>
+                    <legend>Choose your profession:</legend>
+                    <input type="radio">
+                    <label>Student</label><br/>
+                    <input type="radio">
+                    <label>UCSD Faculty</label><br/>
+                    <input type="radio">
+                    <label>Recruiter</label><br/>
+                    <input type="radio">
+                    <label>Other</label><br/>
+                </fieldset>
+                <br>
+                <label>Please provide any other information I need: </label>
+                <input type="file">
+                <br>
+                <textarea>Leave me a personalized note here!</textarea>
+                <br>
+                <br>
+                <input type="reset" value="Reset your information">
+                <input type="submit" value="Contact me!">
+            </form>
+            <br>
+            <hr>
+            <!--Fun Questions-->
+            <h3>Here are some fun questions for you!</h3>
+            <label for="myWebsite">What is your favorite part of my personal website?</label>
+            <input list="website-choices" id="myWebsite" name="myWebsite" />
+            <datalist id="website-choices">
+            <option value="Introduction">
+            <option value="Education">
+            <option value="Programming Skills">
+            <option value="Languages">
+            <option value="Pictures">
+            </datalist>
+            <br>
+            <label>What is your favorite color?</label>
+            <input type="color">
+            <br>
+            <label>How excited are you to get to know me?</label>
+            <input type="range">
+            <br>
+            <label>Share your personal website with me!</label>
+            <input type="url">
         </main>
         <footer>
             <figure>
