--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
             <div>
                 <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
                     I love <em>programming</em>, implementing my vision through <em>personal projects</em>, and helping <em>my community</em>. 
-                    Outside of classes, I actively participate in <em>student organizations</em> and love <em>theatre</em>!</p>
+                    Outside of classes, I actively participate in <em>student organizations</em> and love <em>theatre</em>!
+                    Dogs are my favorite animal!</p>
+
+                <video controls width="350">
+                    <source src="https://anoushkadave.github.io/cse110-lab2/media/dog_video.mp4" type="video/mp4">      
+                    Your browser does not support the video tag.
+                    </source>
+                </video>
 
                 <p>Here is where UC San Diego is located:</p>
                 <iframe id="inlineFrame"
