all changes done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
             <picture>
                 <img src="images/Anoushka_Dave.jpg" alt="" width="250" height="250"/>
             </picture>
+            <svg><circle cx="10" cy="10" r="4"></circle></svg>
             <br>
 
-            <code>System.out.println("Hello, World! Welcome to my personal website!");</code>
+            <code>System.out.println("Hello, World! Welcome to my personal website!");</code> 
+
+            <canvas id="myCanvas" width="50" height="50"></canvas>
+
             <div>
                 <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
                     I love <em>programming</em>, implementing my vision through <em>personal projects</em>, and helping <em>my community</em>. 
@@ -26,7 +30,7 @@
 
                 <video controls width="350">
                     <source src="https://anoushkadave.github.io/cse110-lab2/media/dog_video.mp4" type="video/mp4">      
-                    Your browser does not support the video tag.
+                        Your browser does not support the video tag.
                     </source>
                 </video>
 
@@ -316,6 +320,11 @@
             <br>
             <label>Share your personal website with me!</label>
             <input type="url">
+            <br>
+            <p>Thanks for visiting my website! This is how I feel about you being here: </p>
+            <audio controls src="https://anoushkadave.github.io/cse110-lab2/media/yay_audio.mp3">
+                Your browser does not support the<code>audio</code> element.>
+            </audio>
         </main>
         <footer>
             <figure>
