changes for html validator

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 <video controls width="350">
                     <source src="https://anoushkadave.github.io/cse110-lab2/media/dog_video.mp4" type="video/mp4">      
                         Your browser does not support the video tag.
-                    </source>
                 </video>
 
                 <p>Here is where UC San Diego is located:</p>
@@ -58,11 +57,9 @@
 
             <p>The following sections describe my experiences in more detail:</p>
             <nav>
-                <ul>
-                    <a href="#education"><button>Education</button></a>
-                    <a href="#programming-skills"><button>Programming Skills</button></a>
-                    <a href="#languages"><button>Languages</button></a>
-                </ul>
+                <button><a href="#education">Education</a></button>
+                <a href="#programming-skills"><button>Programming Skills</button></a>
+                <a href="#languages"><button>Languages</button></a>
             </nav>
             <hr>
         </header>
