changes for html validator

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><b><pre>Programming     </pre></b></td>
+                                    <td><pre>Programming     </pre></td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -129,7 +129,7 @@
                                     <td>CSE 151A</td>
                                 </tr>
                                 <tr>
-                                    <td><b><pre>Theory     </pre></b></td>
+                                    <td><pre>Theory     </pre></td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -149,7 +149,7 @@
                                     <td>CSE 105</td>
                                 </tr>
                                 <tr>
-                                    <td><b><pre>Mathematics     </pre></b></td>
+                                    <td><pre>Mathematics     </pre></td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -169,7 +169,7 @@
                                     <td>CSE 103</td>
                                 </tr>
                                 <tr>
-                                    <td><b><pre>General Education     </pre></b></td>
+                                    <td><pre>General Education     </pre></td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -182,7 +182,6 @@
                                     <td></td>
                                     <td>General Chemistry 1</td>
                                     <td>CHEM 6A</td>
-                                </tr>
                                 </tr>
                             </tbody>
                         </table>
