changes for html validator

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 
             <p>The following sections describe my experiences in more detail:</p>
             <nav>
-                <button><a href="#education">Education</a></button>
-                <a href="#programming-skills"><button>Programming Skills</button></a>
-                <a href="#languages"><button>Languages</button></a>
+                <ul>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#programming-skills">Programming Skills</a></li>
+                    <li><a href="#languages">Languages</a></li>
+                </ul>
             </nav>
             <hr>
         </header>
@@ -321,10 +323,14 @@
             <audio controls src="https://anoushkadave.github.io/cse110-lab2/media/yay_audio.mp3">
                 Your browser does not support the<code>audio</code> element.>
             </audio>
+            <br>
+            <br>
+            <button>Press me if you liked my website!</button>
+            <hr>
         </main>
         <footer>
             <figure>
-                <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342.75" height="80.25">
+                <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342" height="80">
                 <figcaption>University of California, San Diego - Jacobs School of Engineering</figcaption>
                 <template>
                     <img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
