changes for html validator

--- a/index.html
+++ b/index.html
@@ -185,6 +185,28 @@
                                     <td>General Chemistry 1</td>
                                     <td>CHEM 6A</td>
                                 </tr>
+                                <template>
+                                    <tr>
+                                        <td><pre>Current Courses     </pre></td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>Software Engineering</td>
+                                        <td>CSE 110</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>Introduction to Machine Learning</td>
+                                        <td>CSE 151A</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>Independent Research</td>
+                                        <td>CSE 198</td>
+                                    </tr>
+                                </template>
                             </tbody>
                         </table>
                     </div>
@@ -266,7 +288,7 @@
                 <br>
                 <label>What is the best way to reach you?</label>
                 <select>
-                    <optgroup>
+                    <optgroup label="Contact-Form">
                         <option>Email</option>
                         <option>Phone</option>
                     </optgroup>
@@ -332,10 +354,9 @@
             <figure>
                 <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342" height="80">
                 <figcaption>University of California, San Diego - Jacobs School of Engineering</figcaption>
-                <template>
-                    <img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
-                    <figcaption>Bear at UCSD CSE</figcaption>
-                </template>
+                <br>
+                <img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
+                <figcaption>Bear at UCSD CSE</figcaption>
             </figure>
         </footer>
     </body>
