--- a/index.html
+++ b/index.html
@@ -354,7 +354,9 @@
             <figure>
                 <img src="images/ucsd_jacobs_logo.png" alt="Logo" width="342" height="80">
                 <figcaption>University of California, San Diego - Jacobs School of Engineering</figcaption>
-                <br>
+            </figure>
+            <br>
+            <figure>
                 <img src="images/ucsd_cse_bear.jpg" alt="Bear" width="480" height="270">
                 <figcaption>Bear at UCSD CSE</figcaption>
             </figure>
