--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <code>System.out.println("Hello, World! Welcome to my personal website!");</code> 
 
-            <canvas id="myCanvas" width="50" height="50"></canvas>
+            <canvas id="myCanvas" width="50" height="50">Need JavaScript to render.</canvas>
 
             <div>
                 <p>I am a second-year Computer Science student at UC San Diego in Marshall College. 
