--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
         
         <!--My GitHub-->
         <link href="https://github.com/anoushkadave" rel="author">
+
+        <!--External Style Sheet-->
+        <link href="./styles.css" rel="stylesheet">
+
+        <!--Internal Styles-->
+        <style>
+
+        </style>
     </head>
     <body>
         <!--Introduction-->
         <header>
+            <!--Inline Styles-->
             <h1>Anoushka Dave</h1>
 
             <picture>
